force-app/main/default/objects/BANT_Score__c/BANT_Score__c.object-meta.xml
<CustomObject>
    <label>BANT Score</label>
    <nameField>
        <label>BANT Score Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BANT Scores</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>