force-app/main/default/objects/BANT_Score__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Budget</fullName>
            </value>
            <value>
                <fullName>Authority</fullName>
            </value>
            <value>
                <fullName>Need</fullName>
            </value>
            <value>
                <fullName>Timing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>