force-app/main/default/objects/BANT_Score__c/fields/Last_Score_Set__c.field-meta.xml
<CustomField>
    <fullName>Last_Score_Set__c</fullName>
    <label>Last Score Set</label>
    <type>Date</type>
</CustomField>