force-app/main/default/objects/BANT_Score__c/fields/Question_Number__c.field-meta.xml
<CustomField>
    <fullName>Question_Number__c</fullName>
    <label>Question Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>